2010-05-13  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>

	* synctex.c, change in code design.
    The macro layer is enhanced to take luatex into account.
    Luatex can now safely use this file instead of luatexdir/utils/synctex.c,
    provided luatexdir/utils/synctex-luatex.h is updated accordingly.
    No change for pdftex not xetex.
    
    * synctex.c, typos fixed, some wrong "size_t" causing false warnings replaced by "int".

2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c, synctex_parser_local.h: #include "c-auto.h"
	instead of "web2c/c-auto.h".

2010-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am (synctex_CFLAGS): Enable compiler warnings.

	Avoid compiler warnings:

	* synctex_main.c: Define _ISOC99_SOURCE to get fmax() prototype
	FIXME: Linux only?
	* synctex_parser_utils.h: Move declaration of synctex_io_modes ...
	* synctex_parser.c: ... to here.
	* synctex_parser_utils.h: Declare synctex_suffix{,_gz} extern ...
	* synctex_parser.c: ... and instantiate here.
	* synctex_parser_utils.[ch]: Constify _synctex_last_path_component()
	return type.
	* synctex_parser.c (__synctex_scanner_t): Change type of struct
	members buffer_{cur,start,end} from 'unsigned char *' to 'char *'
	and remove the casts.
	(_synctex_class_t synctex_class_*): Declare as non-const.
	(_synctex_scan_named): Constify string param `name'.

2010-01-10  Jérôme Laurens  <jerome.laurens@u-bourgogne.fr>

	* synctex_parser.c: in the _synctex_smallest_container() function,
			SYNCTEX_WIDTH is replaced with SYNCTEX_ABS_WIDTH
            to take into account h boxes with negative width.
            Solves a problem with amsmath's gather environment
	* synctex_parser.c: enhancements in comments to better explain the code

2009-12-30  Jérôme Laurens  <jerome.laurens@u-bourgogne.fr>

	* synctex_parser_utils.c: in the _synctex_malloc() function,
            memset() is used unconditionally (suggested by J. Kew).