@@ -1,10 +1,14 @@
 2010-05-13  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>
 
+	* synctex.c, very minor change in code design to remove wrong warnings when building xetex.
+    
+2010-05-13  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>
+
 	* synctex.c, change in code design.
     The macro layer is enhanced to take luatex into account.
     Luatex can now safely use this file instead of luatexdir/utils/synctex.c,
     provided luatexdir/utils/synctex-luatex.h is updated accordingly.
-    No change for pdftex not xetex.
+    No change for pdftex nor xetex.
     
     * synctex.c, typos fixed, some wrong "size_t" causing false warnings replaced by "int".
 
